kubernetes/services/adguard/adguard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: default
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: adguard
  ports:
    - name: ui
      port: 3000
      targetPort: 3000
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
